ci: add graphviz for test

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          sudo apt install -y --no-install-recommends graphviz
           npm i -g npm@9
           npm ci
           npm run test
