chore: exclude tests and tooling config from published files
> BEFORE:

    ```
    npm notice === Tarball Contents ===
    npm notice 222B   .editorconfig
    npm notice 144B   .eslintrc
    npm notice 1.0kB  .github/workflows/nodejs.yml
    npm notice 1.2kB  .github/workflows/publish.yml
    npm notice 3B     .nvmrc
    npm notice 176B   .release-it.json
    npm notice 145B   .travis.yml
    npm notice 30.4kB CHANGELOG.md
    npm notice 1.1kB  LICENSE
    npm notice 14.7kB README.md
    npm notice 6.1kB  bin/cli.js
    npm notice 4.4kB  lib/api.js
    npm notice 1.4kB  lib/cyclic.js
    npm notice 4.3kB  lib/graph.js
    npm notice 59B    lib/log.js
    npm notice 3.3kB  lib/output.js
    npm notice 6.2kB  lib/tree.js
    npm notice 2.0kB  package.json
    npm notice 2.3kB  test/amd.js
    npm notice 127B   test/amd/amdes6.js
    npm notice 53B    test/amd/circular/a.js
    npm notice 45B    test/amd/circular/b.js
    npm notice 45B    test/amd/circular/c.js
    npm notice 37B    test/amd/circular/d.js
    npm notice 45B    test/amd/circular/e.js
    npm notice 45B    test/amd/circular/f.js
    npm notice 45B    test/amd/circular/g.js
    npm notice 45B    test/amd/circular/h.js
    npm notice 52B    test/amd/circular/main.js
    npm notice 68B    test/amd/circularAlias/config.js
    npm notice 36B    test/amd/circularAlias/dos.js
    npm notice 38B    test/amd/circularAlias/x86.js
    npm notice 55B    test/amd/circularRelative/a.js
    npm notice 56B    test/amd/circularRelative/foo/b.js
    npm notice 43B    test/amd/nested/a.js
    npm notice 42B    test/amd/nested/b.js
    npm notice 93B    test/amd/nested/main.js
    npm notice 49B    test/amd/ok/a.js
    npm notice 0B     test/amd/ok/d.js
    npm notice 49B    test/amd/ok/e.js
    npm notice 49B    test/amd/ok/sub/b.js
    npm notice 45B    test/amd/ok/sub/c.js
    npm notice 79B    test/amd/plugin.js
    npm notice 50B    test/amd/requirejs/a.js
    npm notice 391B   test/amd/requirejs/config.js
    npm no

--- a/package.json
+++ b/package.json
@@ -27,6 +27,15 @@
   "bin": {
     "madge": "./bin/cli.js"
   },
+  "files": [
+    ".nvmrc",
+    ".editorconfig",
+    ".eslintrc",
+    "bin",
+    "lib",
+    "CHANGELOG.md",
+    "!test/"
+  ],
   "scripts": {
     "test": "npm run lint && npm run mocha",
     "mocha": "mocha test/*.js",
