--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "madge",
-  "version": "6.1.0",
+  "name": "@lgbot/madge",
+  "version": "6.2.0",
   "author": "Patrik Henningsson <patrik.henningsson@gmail.com>",
   "repository": "git://github.com/pahen/madge",
   "homepage": "https://github.com/pahen/madge",
